# Multiple-smi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client_smi.py  client_smi_appindicator.py  hosts_to_smi.json  my_smi.py  nvidia_smi.py  pynvml.py  pyproject.toml  requirements.txt  server_smi.py  server_smi.service  server_smi_daemon.sh  setup.py
multiple_smi/: appindicator_utils.py  client_smi.py  client_smi_appindicator.py  client_utils.py  server_smi.py
multiple_smi/client/: client_smi.py  client_utils.py  notifier_util.py  update_hosts_list.py
multiple_smi/client/menu_frontend/: appindicator.py  argos.py  default_frontend.py  icon_utils.py
multiple_smi/server/: install_server_service.py  my_smi.py  server_smi.py
